--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nanoPHP/nanoPHP",
+    "name": "alrik11es/nanoPHP",
     "description": "Minimalistic couchdb driver for PHP >5.3",
     "keywords": ["couchDB", "driver", "minimalistic"],
     "homepage": "http://github.com/alrik11es/nanoPHP",
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "ext-curl": "*"
     },
     "autoload": {
         "psr-0": {"nanoPHP": "./src/"}
