--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
     },
     "autoload": {
         "psr-0": {"nanoPHP": "./src/"}
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.x-dev"
+        }
     }
 }
