[Global] Made Nano psr-0 compliant so it works now on Composer adding a namespace as expected.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-curl": "*"
     },
     "autoload": {
-        "psr-0": {"nano-php": "./src/"}
+        "psr-0": {"Nano": "./src/"}
     },
     "extra": {
         "branch-alias": {
