--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ php:
   - 5.3
   - 5.4
 
+services:
+  - couchdb
+
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev
